is_publishedフラグを実装
